--- a/estilo.css
+++ b/estilo.css
@@ -7,15 +7,15 @@ body{
     /*Está definindo a cor de fundo do site pra rgb(169, 228, 178) */
     /*A cor pode ser escrita normalmente ( yellow, green, etc ), hexadecimal ( Ex : #a1d3ef ou a1 é a parte vermelha, d3 parte verde e ef parte azul), rgb(35, 137, 195) , rgba (0,0,0,0) onde o último 0 é transparência pode ser 0 até 1, hsl(M, S%, L%) = MatizSaturaçãoLuminosidade*, hsla ( M, S%, L%, A) onde A é Alpha */
 }
-/* @font-face {
-    /*Aqui eu estou declarando uma regra de fonte no arquivo CSS /
-    font-family: 'cursive';
-    src: url('_fonts/aladdin.ttf') format('truetype');
-    /* Mostra o caminho de onde a fonte está /
-} */
+@font-face {
+    /*Aqui eu estou declarando uma regra de fonte no arquivo CSS */
+    font-family: 'aladdin';
+    src: url('aladdin.ttf');
+    /*Mostra o caminho de onde a fonte está */
+}
 h1{
 /*Alterações somente no <h1> : */
-    font-family: cursive;
+    font-family: aladdin;
     /*Define a fonte do h1 como aladdin que foi especificada onde está antes */
     /*Se eu quiser posso usar as fontes que já vem no programa */
     /* Site que recomendo é https://www.dafont.com/pt/ */
