--- a/estilo.css
+++ b/estilo.css
@@ -14,6 +14,13 @@ body{
     src: url('aladdin.ttf');
     /*Mostra o caminho de onde a fonte está */
 }
+div#interface {
+    width: 800px;
+    background-color: #ffffff;
+    margin: -20px auto 0px auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
+    padding: 10x;
+}
 h1{
 /*Alterações somente no <h1> : */
     font-family: aladdin;
