--- a/estilo.css
+++ b/estilo.css
@@ -2,37 +2,26 @@
 /*Isso é pra pegar acentuação e cabeçalho*/
 
 body{
-/* Alterações no Corpo do site */
     background-color: rgb(169, 228, 178)
-    /*Está definindo a cor de fundo do site pra rgb(169, 228, 178) */
-    /*A cor pode ser escrita normalmente ( yellow, green, etc ), hexadecimal ( Ex : #a1d3ef ou a1 é a parte vermelha, d3 parte verde e ef parte azul), rgb(35, 137, 195) , rgba (0,0,0,0) onde o último 0 é transparência pode ser 0 até 1, hsl(M, S%, L%) = MatizSaturaçãoLuminosidade*, hsla ( M, S%, L%, A) onde A é Alpha */
 }
 
 @font-face {
-    /*Aqui eu estou declarando uma regra de fonte no arquivo CSS */
     font-family: 'aladdin';
     src: url('aladdin.ttf');
     /*Mostra o caminho de onde a fonte está */
 }
 div#interface {
-    width: 800px;
-    background-color: #ffffff;
-    margin: -20px auto 0px auto;
+    width: 500px;
+    background-color: #aaaaaa;
+    margin: -230px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
-    padding: 10x;
+    padding: 10;
 }
 h1{
-/*Alterações somente no <h1> : */
     font-family: aladdin;
-    /*Define a fonte do h1 como aladdin que foi especificada onde está antes */
-    /*Se eu quiser posso usar as fontes que já vem no programa */
-    /* Site que recomendo é https://www.dafont.com/pt/ */
     font-size: 50px;
-    /*Define o tamanho sendo 50 */
     color:blue;
-    /*Define a cor para Azul */
     text-shadow: 5px 5px 5px black;
-    /*Define o sombreamento */
 }
 p{
 /*Alterações em parágrafos <p>*/
