--- a/estilo02.css
+++ b/estilo02.css
@@ -1,7 +1,7 @@
 @charset "UTF-8" ;
 
 body{
-    background-color: rgb(200, 200, 150)
+    background-color: rgb(150, 150, 150)
 }
 
 @font-face {
@@ -10,10 +10,9 @@ body{
 }
 div#interface {
     width: 500px;
-    background-color: #aaaaaa;
-    margin: -280px 230px 0px 170px;
+    background-color: #cccccc;
+    margin: -320px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
-    padding: 10px;
 }
 h1{
     font-family: aladdin;
