--- a/estilo02.css
+++ b/estilo02.css
@@ -9,10 +9,12 @@ body{
     src: url('aladdin.ttf');
 }
 div#interface {
-    width: 500px;
+    width: 450px;
     background-color: #cccccc;
     margin: -400px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
+    height: 500px;
+    overflow: auto;
 }
 h1{
     font-family: aladdin;
