--- a/estilo13.css
+++ b/estilo13.css
@@ -9,10 +9,22 @@ body{
     src: url('aladdin.ttf');
 }
 div#interface {
-    width: 500px;
+    width: 520px;
     background-color: #bbbbbb;
     margin: -400px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
+    overflow: auto;
+    height: 500px;
+    display: block;
+/* Display :  */
+/* block = não resolve */
+/* flex = joga o conteúdo pra direita */
+/* flow-root = não resolve */
+/* grid = não resolve */
+/* inline = joga o conteúdo pra baixo */
+/* inline-block = não resolve */
+/* inline-flex = joga o h1 e h2 pro lado do texto */
+/* inline-grid = joga o conteúdo pra baixo */
 }
 h1{
     font-family: aladdin;
