--- a/estilo06.css
+++ b/estilo06.css
@@ -1,27 +1,14 @@
 @charset "UTF-8" ;
 
 body{
-    background-color: rgb(100, 100, 50)
+    background: rgb(100, 150, 60)
 }
-
-@font-face {
-    font-family: 'aladdin';
-    src: url('aladdin.ttf');
-}
-div#interface {
-    width: 500px;
-    background-color: rgb(100, 100, 100);
-    margin: -320px 230px 0px 170px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
-}
-h1{
-    font-family: aladdin;
-    font-size: 50px;
-    color:blue;
-    text-shadow: 5px 5px 5px black;
-}
-p{
-    color: black(0,0,0);
-    text-align:justify;
-    text-indent: 20px;
+#gameBox{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    box-shadow: 0px 0px 50px #262626;
+    overflow: hidden;
+    border-radius: 10px;
 }
