--- a/estilo11.css
+++ b/estilo11.css
@@ -1,7 +1,7 @@
 @charset "UTF-8" ;
 
 body{
-    background-color: rgb(150, 150, 100)
+    background-color: rgb(200, 180, 150)
 }
 
 @font-face {
@@ -10,7 +10,7 @@ body{
 }
 div#interface {
     width: 500px;
-    background-color: #dddddd;
+    background-color: #aaaaaa;
     margin: -450px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
 }
