--- a/estilo21.css
+++ b/estilo21.css
@@ -1,7 +1,7 @@
 @charset "UTF-8" ;
 
 body{
-    background-color: rgb(150, 150, 100)
+    background-color: rgb(100, 150, 50)
 }
 
 @font-face {
@@ -10,8 +10,8 @@ body{
 }
 div#interface {
     width: 500px;
-    background-color: #dddddd;
-    margin: -450px 230px 0px 170px;
+    background-color: rgb(100, 100, 70);
+    margin: -300px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
 }
 h1{
@@ -22,6 +22,6 @@ h1{
 }
 p{
     color: black(0,0,0);
-    text-align:justify;
+    text-align:left;
     text-indent: 20px;
 }
