--- a/estilo99.css
+++ b/estilo99.css
@@ -1,7 +1,7 @@
 @charset "UTF-8" ;
 
 body{
-    background-color: rgb(150, 150, 100)
+    background-color: rgb(50, 100, 50)
 }
 
 @font-face {
@@ -10,8 +10,8 @@ body{
 }
 div#interface {
     width: 500px;
-    background-color: #dddddd;
-    margin: -450px 230px 0px 170px;
+    background-color: rgb(100, 100, 100);
+    margin: -320px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
 }
 h1{
