--- a/estilo03.css
+++ b/estilo03.css
@@ -10,9 +10,11 @@ body{
 }
 div#interface {
     width: 500px;
+    height: 500px;
     background-color: #dddddd;
     margin: -450px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
+    overflow: auto;
 }
 h1{
     font-family: aladdin;
