--- a/estilo15.css
+++ b/estilo15.css
@@ -1,39 +1,75 @@
-@charset "UTF-8" ;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
-body{
-    background-color: rgb(200, 130, 150)
+* { /* Voltar e Pergunta */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'poppins', sans-serif;
+  font-size: 20px;
+  color: red;
 }
 
-@font-face {
-    font-family: 'aladdin';
-    src: url('aladdin.ttf');
+body {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  flex-direction: column;
+  gap: 5px;
+  background: black;
 }
-div#interface {
-    width: 520px;
-    background-color: #bbbbbb;
-    margin: -450px 230px 0px 170px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
-    overflow: auto;
-    height: 500px;
-    display: block;
-/* Display :  */
-/* block = não resolve */
-/* flex = joga o conteúdo pra direita */
-/* flow-root = não resolve */
-/* grid = não resolve */
-/* inline = joga o conteúdo pra baixo */
-/* inline-block = não resolve */
-/* inline-flex = joga o h1 e h2 pro lado do texto */
-/* inline-grid = joga o conteúdo pra baixo */
+
+body h2 { /* Pergunta */
+  color: white;
+  font-size: 50px; 
 }
-h1{
-    font-family: aladdin;
-    font-size: 50px;
-    color:blue;
-    text-shadow: 5px 5px 5px black;
+
+main {
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
+  width: 100%;
+  max-width: 500px;
+  min-height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-p{
-    color: black(0,0,0);
-    text-align:justify;
-    text-indent: 20px;
+
+.content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 10px;
+}
+
+.spnQtd {
+  text-align: end;
+}
+
+.answers {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+button { /* Alternativas */
+  width: 100%;
+  text-align: start;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #008CCC;
+  color: white;
+}
+
+.finish {
+  display: none;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.finish button {
+  text-align: center;
 }
