--- a/JogoPerguntas.css
+++ b/JogoPerguntas.css
@@ -1,3 +1,5 @@
+/* Estilo do JogoPerguntas */
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 * { /* Voltar e Pergunta */
