--- a/NomeIdiomas.css
+++ b/NomeIdiomas.css
@@ -1,7 +1,9 @@
+/* Estilo NomeIdiomas */
+
 @charset "UTF-8" ;
 
 body{
-    background-color: rgb(100, 100, 100)
+    background-color: rgb(200, 160, 150)
 }
 
 @font-face {
@@ -10,8 +12,8 @@ body{
 }
 div#interface {
     width: 500px;
-    height: 600px;
-    background-color: #ffffff;
+    height: 500px;
+    background-color: #aaaaaa;
     margin: -450px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
     overflow: auto;
