--- a/algoritmo.css
+++ b/algoritmo.css
@@ -1,7 +1,8 @@
 @charset "UTF-8" ;
+/* Estilo do Menu Algoritmo */
 
 body{
-    background-color: rgb(150, 100, 100)
+    background-color: rgb(200, 150, 150)
 }
 
 @font-face {
@@ -11,8 +12,8 @@ body{
 div#interface {
     width: 500px;
     height: 500px;
-    background-color: #eeeeee;
-    margin: -450px 230px 0px 170px;
+    background-color: #bbbbbb;
+    margin: -500px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
     overflow: auto;
 }
