--- a/canvas.css
+++ b/canvas.css
@@ -1,7 +1,8 @@
 @charset "UTF-8" ;
+/* Estilo do Menu Canvas */
 
 body{
-    background-color: rgb(150, 150, 150)
+    background-color: rgb(150, 150, 100)
 }
 
 @font-face {
@@ -10,10 +11,10 @@ body{
 }
 div#interface {
     width: 500px;
-    background-color: #cccccc;
-    margin: -450px 230px 0px 170px;
+    height: 500px;
+    background-color: #dddddd;
+    margin: -500px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
-    height: 600px;
     overflow: auto;
 }
 h1{
