--- a/estilo01.css
+++ b/estilo01.css
@@ -1,7 +1,8 @@
 @charset "UTF-8" ;
+/* Estilo do Menu JogoCobrinha */
 
 body{
-    background-color: rgb(200, 150, 150)
+    background-color: rgb(150, 150, 60)
 }
 
 @font-face {
@@ -9,11 +10,11 @@ body{
     src: url('aladdin.ttf');
 }
 div#interface {
-    width: 500px;
-    height: 500px;
-    background-color: #bbbbbb;
-    margin: -450px 230px 0px 170px;
+    width: 450px;
+    background-color: #cccccc;
+    margin: -500px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
+    height: 500px;
     overflow: auto;
 }
 h1{
