--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @charset "UTF-8" ;
 
 body{
-    background-color: rgb(200, 180, 150)
+    background-color: rgb(200, 200, 150)
 }
 
 @font-face {
@@ -9,21 +9,29 @@ body{
     src: url('aladdin.ttf');
 }
 div#interface {
-    width: 500px;
-    height: 500px;
+    width: 480px;
     background-color: #aaaaaa;
-    margin: -450px 230px 0px 170px;
+    margin: -470px 230px 0px 180px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
-    overflow: auto;
+    padding: 10px;
 }
 h1{
     font-family: aladdin;
     font-size: 50px;
     color:blue;
     text-shadow: 5px 5px 5px black;
+    margin-top: auto;
+    margin-bottom: auto;
+    text-align: center;
+}
+h2{
+    margin-top: auto;
 }
 p{
     color: black(0,0,0);
     text-align:justify;
     text-indent: 20px;
+}
+div#ibage {
+   margin-left: 30px;
 }
