--- a/livros.css
+++ b/livros.css
@@ -1,3 +1,4 @@
+/* Estilo do Livros */
 @charset "UTF-8" ;
 
 body{
@@ -9,29 +10,21 @@ body{
     src: url('aladdin.ttf');
 }
 div#interface {
-    width: 480px;
+    width: 500px;
+    height: 500px;
     background-color: #aaaaaa;
-    margin: -470px 230px 0px 170px;
+    margin: -450px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
-    padding: 10px;
+    overflow: auto;
 }
 h1{
     font-family: aladdin;
     font-size: 50px;
     color:blue;
     text-shadow: 5px 5px 5px black;
-    margin-top: auto;
-    margin-bottom: auto;
-    text-align: center;
-}
-h2{
-    margin-top: auto;
 }
 p{
     color: black(0,0,0);
     text-align:justify;
     text-indent: 20px;
-}
-div#ibage {
-   margin-left: 30px;
 }
