--- a/JogoPerguntas.css
+++ b/JogoPerguntas.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
-* { /* Voltar e Pergunta */
+* { /* Volta da Pergunta */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
