--- a/estilo01.css
+++ b/estilo01.css
@@ -9,11 +9,11 @@ body{
     src: url('aladdin.ttf');
 }
 div#interface {
-    width: 450px;
+    width: 500px;
     background-color: #cccccc;
-    margin: -500px 230px 0px 170px;
+    margin: -600px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
-    height: 500px;
+    height: 600px;
     overflow: auto;
 }
 h1{
@@ -24,6 +24,7 @@ h1{
 }
 p{
     color: black(0,0,0);
-    text-align:justify;
-    text-indent: 20px;
+    text-align: justify;
+    text-indent: 10px;
+    line-height: 0.5;
 }
