--- a/estilo90.css
+++ b/estilo90.css
@@ -12,7 +12,7 @@ body{
 div#interface {
     width: 600px;
     height: 600px;
-    background-color: rgb(100, 100, 70);
+    background-color: #646446;
     margin: -500px 230px 0px 180px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
     overflow: auto;
