--- a/estilo96.css
+++ b/estilo96.css
@@ -1,8 +1,8 @@
 @charset "UTF-8" ;
-/* Estilo do Menu Atalhos  */
+/* Estilo do Menu Algoritmo */
 
 body{
-    background-color: rgb(150, 150, 150)
+    background-color: rgb(200, 150, 150)
 }
 
 @font-face {
@@ -12,8 +12,8 @@ body{
 div#interface {
     width: 500px;
     height: 600px;
-    background-color: #cccccc;
-    margin: -500px 230px 0px 170px;
+    background-color: #bbbbbb;
+    margin: -600px 230px 0px 170px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, -5);
     overflow: auto;
 }
